# rust-html-render-benchmarks

./: Cargo.toml  README.md
benches/: askama.rs  fhtml.rs  handlebars.rs  html_node.rs  hyped.rs  hypertext.rs  maud.rs  minijinja.rs  tera.rs  tinytemplate.rs
templates/: askama_teams.html  tera_big_table.html  tera_teams.html
